[gd_scene load_steps=3 format=3 uid="uid://dyvywwxa4u4af"]

[ext_resource type="Texture2D" uid="uid://dwmbkqq8v4vu8" path="res://assets/sprites/battleback10.png" id="1_c2u1v"]
[ext_resource type="Script" uid="uid://reh64sax3356" path="res://scripts/Options.gd" id="1_yjkok"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_yjkok")
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_c2u1v")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="OptionsContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TItleContainer" type="MarginContainer" parent="MarginContainer/OptionsContainer"]
custom_minimum_size = Vector2(20, 80)
layout_mode = 2
size_flags_vertical = 0

[node name="Options" type="Label" parent="MarginContainer/OptionsContainer/TItleContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Opções"
vertical_alignment = 1

[node name="VolumeVContainer" type="VBoxContainer" parent="MarginContainer/OptionsContainer"]
layout_mode = 2

[node name="Music" type="Label" parent="MarginContainer/OptionsContainer/VolumeVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Música"
vertical_alignment = 1

[node name="MusicControl" type="HSlider" parent="MarginContainer/OptionsContainer/VolumeVContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
min_value = -30.0
max_value = 0.0

[node name="SFX" type="Label" parent="MarginContainer/OptionsContainer/VolumeVContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Efeitos Sonoros"
vertical_alignment = 1

[node name="SFXControl" type="HSlider" parent="MarginContainer/OptionsContainer/VolumeVContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
min_value = -30.0
max_value = 0.0

[node name="Return" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Voltar"

[connection signal="value_changed" from="MarginContainer/OptionsContainer/VolumeVContainer/MusicControl" to="." method="_on_sound_control_value_changed"]
[connection signal="value_changed" from="MarginContainer/OptionsContainer/VolumeVContainer/SFXControl" to="." method="_on_sfx_control_value_changed"]
[connection signal="pressed" from="MarginContainer/Return" to="." method="_on_return_pressed"]
